# VRP-REPORTS

./: .gitignore  CLAUDE.md  Makefile  README.md  _headers  build.sh  discovery_2026.json  index.json  pyproject.toml  requirements.txt  stats.json
.github/workflows/: deploy.yml  test.yml
docs/: DEPLOYMENT.md
issues/472921872/: report.json  report.md
issues/473118648/: report.json  report.md
issues/473851441/: report.json  report.md
issues/474435504/: report.json  report.md
issues/474583539/: report.json  report.md
issues/474670215/: report.json  report.md
issues/474763968/: report.json  report.md
issues/474948986/: report.json  report.md
issues/474951825/: report.json  report.md
issues/475238879/: report.json  report.md
issues/475613896/: report.json  report.md
issues/475833002/: report.json  report.md
issues/476898368/: report.json  report.md
issues/477033835/: report.json  report.md
issues/477180001/: report.json  report.md
issues/478659010/: report.json  report.md
issues/479726070/: report.json  report.md
issues/480122167/: report.json  report.md
issues/480195317/: report.json  report.md
issues/480438199/: report.md  (+1 more)
scripts/: config.py  scaled_scraper.py  utils.py
tests/: fixtures.py  test_cli.py  test_corpus.py  test_index_builder.py  test_markdown_gen.py  test_parser.py  test_pipeline.py  test_server.py  test_utils.py
ui/: index.html  llms.txt  schema.json  skill.md
vrp/: __init__.py  cli.py  config.py  corpus.py  discovery.py  extractor.py  index_builder.py  markdown_gen.py  models.py  parser.py  server.py  utils.py
(+3 files in other folders)
