[project]
name = "vrp-reports"
version = "1.0.0"
description = "Chromium VRP Bug Bounty Reports Scraper & Dashboard"
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.40",
    "aiohttp>=3.9",
    "click>=8.1",
    "pydantic>=2.5",
    "rich>=13.0",
    "markdownify>=0.11",
]

[project.scripts]
vrp = "vrp.cli:cli"

[tool.setuptools.packages.find]
include = ["vrp*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
